// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ol runs correctly 1`] = `
Array [
  "3",
  <ol>
    <li>
      <span
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        Item 1

      </span>
    </li>
    <li>
      <span
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        Item 2

      </span>
    </li>
    <li>
      <span
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        Item 3
      </span>
    </li>
  </ol>,
]
`;

exports[`ul runs correctly 1`] = `
Array [
  "3",
  <ul>
    <li>
      <span
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        Item 1

      </span>
    </li>
    <li>
      <span
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        Item 2

      </span>
    </li>
    <li>
      <span
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        Item 3
      </span>
    </li>
  </ul>,
]
`;
